3rd footer added

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 			  crossorigin="anonymous"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
   </head>
+
   <body>
     <header>
       <div class="div-header">
@@ -55,9 +54,12 @@
 
     </div>
 
+    <!-- slick files -->
     <script src="./slick-1.8.1/slick/slick.min.js"></script>
     <script src="./index.js"></script>
-    <!-- <footer>
+
+
+    <footer>
       <div class="footer-div">
         <h3 class="footer-ul-h3">ONLINE STORE</h3>
 
@@ -94,7 +96,6 @@
           <p class="footer-p">UNITED STATES</p>
 
       </div>
-
-    </footer> -->
+    </footer>
   </body>
 </html>
