--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="div-header-shop">
           <img class="shopping-cart" src="https://img.icons8.com/ultraviolet/40/000000/shopping-cart.png">
-          <div class="shop-counter">0</div>
+          <div class="shop-counter"></div>
           <img class="profile-pic"src="https://img.icons8.com/plasticine/100/000000/user.png">
         </div>
       </header>
