--- a/confirmation.html
+++ b/confirmation.html
@@ -5,7 +5,7 @@
     <title>E-Commerce Project</title>
 
     <link rel="stylesheet" href="./master.css">
-
+    <link rel="stylesheet" href="./confirmation.css">
     <script
 			  src="https://code.jquery.com/jquery-3.4.1.min.js"
 			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -16,9 +16,9 @@
   <body>
     <header>
       <div class="div-header">
-        <a href="#">SHOPLANE</a>
-        <a href="#">CLOTHING</a>
-        <a href="#">ACCESORIES</a>
+        <a href="./index.html">SHOPLANE</a>
+        <a href="./index.html">CLOTHING</a>
+        <a href="./index.html">ACCESORIES</a>
       </div>
       <div class="div-header-search">
         <input type="text" name="search" placeholder="Your search here...">
@@ -30,48 +30,65 @@
       </div>
     </header>
 
-    <div class="carousal-container">
-      <!--esto NO iria -->
+    <div class="separate-div">
+
     </div>
 
-    <footer>
-      <div class="footer-div">
-        <h3 class="footer-ul-h3">ONLINE STORE</h3>
+      <main id="confirmation-main">
+        <div id="confirmation-animation">
+          aca iria la animation
+        </div>
+        <h2 class="confirmation-h2">Successful Purchase</h2>
+        <p class="confirmation-p">Your order will be delivered
+          in the next 2 days.</p>
+        <a href="./index.html">Back to Shop</a>
+      </main>
 
-          <p class="footer-p">MEN CLOTHING</p>
-          <p class="footer-p">WOMEN CLOTHING</p>
-          <p class="footer-p">MEN ACCESORIES</p>
-          <p class="footer-p">WOMEN ACCESORIES</p>
+      <footer>
+        <div class="footer-div-container">
+          <div class="footer-div">
+            <h3 class="footer-ul-h3">ONLINE STORE</h3>
 
-      </div>
-      <div class="footer-div">
-        <h3 class="footer-ul-h3">HELPFUL LINKS</h3>
+              <p class="footer-p">MEN CLOTHING</p>
+              <p class="footer-p">WOMEN CLOTHING</p>
+              <p class="footer-p">MEN ACCESORIES</p>
+              <p class="footer-p">WOMEN ACCESORIES</p>
 
-          <p class="footer-p">HOME</p>
-          <p class="footer-p">ABOUT</p>
-          <p class="footer-p">CONTACT</p>
+          </div>
+          <div class="footer-div">
+            <h3 class="footer-ul-h3">HELPFUL LINKS</h3>
 
-      </div>
-      <div class="footer-div">
-        <h3 class="footer-ul-h3">PARTNERS</h3>
+              <p class="footer-p">HOME</p>
+              <p class="footer-p">ABOUT</p>
+              <p class="footer-p">CONTACT</p>
 
-          <p class="footer-p">ZARA</p>
-          <p class="footer-p">PANTALOONS</p>
-          <p class="footer-p">LEVIS</p>
-          <p class="footer-p">UCB</p>
-          <p class="footer-p">+ MANY MORE</p>
+          </div>
+          <div class="footer-div">
+            <h3 class="footer-ul-h3">PARTNERS</h3>
 
-      </div>
-      <div class="footer-div">
-        <h3 class="footer-ul-h3">ADDRESS</h3>
+              <p class="footer-p">ZARA</p>
+              <p class="footer-p">PANTALOONS</p>
+              <p class="footer-p">LEVIS</p>
+              <p class="footer-p">UCB</p>
+              <p class="footer-p">+ MANY MORE</p>
 
-          <p class="footer-p">BUILDING 101</p>
-          <p class="footer-p">CENTRAL AVENUE</p>
-          <p class="footer-p">LA - 902722</p>
-          <p class="footer-p">UNITED STATES</p>
+          </div>
+          <div class="footer-div">
+            <h3 class="footer-ul-h3">ADDRESS</h3>
 
-      </div>
-      <!-- EDYODA IMG -->
+              <p class="footer-p">BUILDING 101</p>
+              <p class="footer-p">CENTRAL AVENUE</p>
+              <p class="footer-p">LA - 902722</p>
+              <p class="footer-p">UNITED STATES</p>
+          </div>
+        </div>
+
+      <h5 class="copyright">
+        &copy; 2019 - NumaX
+      </h5>
     </footer>
+
+  <!-- EDYODA PIC -->
+
   </body>
 </html>
