--- a/product.html
+++ b/product.html
@@ -12,15 +12,17 @@
 			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 			  crossorigin="anonymous"></script>
 
+    <script src="./product.js" charset="utf-8"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
     <header>
         <div class="div-header">
-          <a href="#">SHOPLANE</a>
-          <a href="#clothes-div-container">CLOTHING</a>
-          <a href="#acc-div-container">ACCESORIES</a>
+          <a href="./index.html">SHOPLANE</a>
+          <a href="./index.html">CLOTHING</a>
+          <a href="./index.html">ACCESORIES</a>
         </div>
 
         <div class="div-header-search">
@@ -57,7 +59,6 @@
               <button type="button" name="button">Add to Cart</button>
             </div>
           </div>
-
 
         </main>
       </div>
