--- a/product.html
+++ b/product.html
@@ -41,18 +41,19 @@
 
       <div class="product-container">
         <aside class="aside-pic">
-          aside
+          <img id="aside-img" src="" alt="Product Image">
         </aside>
 
         <main class="main-product">
-          <h1 class="prod-title">title</h1>
-          <h2 class="prod-brand">brand</h2>
-          <h3 class="prod-price">price</h3>
-          <p class="prod-desc">description</p>
+          <h1 class="prod-title"></h1>
+          <h2 class="prod-brand"></h2>
+          <h3 class="prod-price"></h3>
+          <p class="prod-desc"></p>
 
           <div class="prod-box">
             <div class="prod-preview">
-                <img class"preview-img" src="" alt="">
+                <!-- dynamic img tags -->
+                <!-- <img class="preview-img"> -->
             </div>
 
             <div class="button-div">
