--- a/checkout.html
+++ b/checkout.html
@@ -34,19 +34,27 @@
     </header>
 
     <div class="checkout-separate">
-
+      <h2>Checkout</h2>
+      <h5>Total Items: </h5>
     </div>
 
     <main id="main-checkout">
       <div id="checkout-list" class="side-div">
         <!-- aca irian los articulos creados dynamic -->
+        <!-- este es el template -->
+        <!-- <div class="check-prod-list">
+          <img src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7579188/2018/11/5/08a7b230-ee8f-46c0-a945-4e835a3c01c01541402833619-United-Colors-of-Benetton-Men-Sweatshirts-1271541402833444-1.jpg">
+          <h3>Title</h3>
+          <p>Quantity</p>
+          <h4>Price $</h4>
+        </div> -->
       </div>
 
       <div id="checkout-total-div" class="side-div">
         <h2 id="checkout-total-h2">Total Amount</h2>
-        <h3 id="total-amount">aca van los nros </h3>
-
-        <button id="buy-now"type="button" name="button">Buy Now</button>
+        <span>Total Order: $<h3 id="total-amount">aca van los nros </h3>
+        </span>
+        <button id="buy-now" type="button" name="button">Buy Now</button>
       </div>
     </main>
 
