--- a/confirmation.html
+++ b/confirmation.html
@@ -36,7 +36,7 @@
 
       <main id="confirmation-main">
         <div id="confirmation-animation">
-          aca iria la animation
+          <div class="animation"></div>
         </div>
         <h2 class="confirmation-h2">Successful Purchase</h2>
         <p class="confirmation-p">Your order will be delivered
