--- a/checkout.html
+++ b/checkout.html
@@ -43,10 +43,14 @@
         <!-- aca irian los articulos creados dynamic -->
         <!-- este es el template -->
         <!-- <div class="check-prod-list">
-          <img src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7579188/2018/11/5/08a7b230-ee8f-46c0-a945-4e835a3c01c01541402833619-United-Colors-of-Benetton-Men-Sweatshirts-1271541402833444-1.jpg">
-          <h3>Title</h3>
-          <p>Quantity</p>
-          <h4>Price $</h4>
+          <div class="check-img-div">
+            <img src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7579188/2018/11/5/08a7b230-ee8f-46c0-a945-4e835a3c01c01541402833619-United-Colors-of-Benetton-Men-Sweatshirts-1271541402833444-1.jpg">
+          </div>
+          <div class="check-text-div">
+            <h3>Title</h3>
+            <p>Quantity</p>
+            <h4>Price $</h4>
+          </div>
         </div> -->
       </div>
 
