--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
         <div id="acc-div-container">
 
         </div>
-
-
+        
+          <!-- EDYODA PIC -->
+        <img id="edyoda" src="https://i.imgur.com/OKAY6Fl.png" alt="EdYoda">
 
       <footer>
         <div class="footer-div-container">
@@ -125,9 +126,8 @@
       <h5 class="copyright">
         &copy; 2019 - NumaX
       </h5>
-    </footer>
 
-    <!-- EDYODA PIC -->
+    </footer>
 
   </body>
 </html>
