--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         <div id="acc-div-container">
 
         </div>
-        
+
           <!-- EDYODA PIC -->
-        <img id="edyoda" src="https://i.imgur.com/OKAY6Fl.png" alt="EdYoda">
+        <!-- <img id="edyoda" src="https://i.imgur.com/OKAY6Fl.png" alt="EdYoda"> -->
 
       <footer>
         <div class="footer-div-container">
