--- a/confirmation.html
+++ b/confirmation.html
@@ -36,7 +36,10 @@
 
       <main id="confirmation-main">
         <div id="confirmation-animation">
-          <div class="animation"></div>
+          <div class="animation">
+            <div class="check-left"></div>
+            <div class="check-right"></div>
+          </div>
         </div>
         <h2 class="confirmation-h2">Successful Purchase</h2>
         <p class="confirmation-p">Your order will be delivered
